Offer metrics supporting in diagnosing the authentication plugin. The metrics provided include number of logins (successful, failed and effective), number and average response time of ACL authentication requests, length of duplicate and blacklists. These metrics are serviced under the $SYS/broker/auth/# topic.

--- a/auth/Makefile
+++ b/auth/Makefile
@@ -1,10 +1,12 @@
-OBJS = auth-plug.o dep/cJSON.o dep/log.o
+MOSQUITTO_SRC ?= ../mosquitto
+
+OBJS = auth-plug.o dep/cJSON.o dep/log.o dep/metrics.c
 
 OSSLINC = -I/usr/include
 OSSLIBS = -L/usr/lib -lcrypto
 
 CFLAGS := -fPIC -Wall -Werror
-CFLAGS += -I$(MOSQ)/src -Idep -DDEBUG=1 $(OSSLINC)
+CFLAGS += -I$(MOSQUITTO_SRC)/include -I$(MOSQ)/src -Idep -DDEBUG=1 $(OSSLINC)
 
 LDFLAGS = -L$(MOSQUITTO_SRC)/lib/
 LDADD = -lcurl $(OSSLIBS) -lmosquitto
@@ -15,7 +17,9 @@ auth-plug.so : $(OBJS)
 	$(CC) $(CFLAGS) $(LDFLAGS) -fPIC -shared -o $@ $(OBJS) $(LDADD)
 
 auth-plug.o: auth-plug.c Makefile
+cJSON.o: cJSON.c cJSON.h Makefile
 log.o: log.c log.h Makefile
+metrics.o: metrics.c metrics.h Makefile
 
 clean :
 	rm -f *.o *.so np
