--- a/auth/dep/CMakeLists.txt
+++ b/auth/dep/CMakeLists.txt
@@ -1,4 +1,5 @@
 target_sources(AuthTest PUBLIC "cJSON.c"
-                               "log.c")
+                               "log.c"
+                               "metrics.c")
 
 target_include_directories(AuthTest PUBLIC .)
